rust_to_wgsl/tests/ui/incorrect_vec_constructor_in_macro.stderr
error: cannot construct `shared::wgsl_in_rust_helpers::Vec3Bool` with struct literal syntax due to private fields
 --> tests/ui/incorrect_vec_constructor_in_macro.rs:3:1
  |
3 | #[shader_module]
  | ^^^^^^^^^^^^^^^^
  |
  = note: ...and other private field `_force_constructor` that was not provided
  = note: this error originates in the attribute macro `shader_module` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you might have meant to use the `new` associated function
  |
3 | #[shader_module]::new(_, _, _)
  |                 ++++++++++++++
